added button to take input for grid size and generate grid, final commit for project for now

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="header">
         <h1>Etch-a-Sketch</h1>
+        <button onclick="showAlert()">Generate Grid</button>
     </div>
     <div class="container"></div>
 </body>
